# AxiomEngine

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  ENHANCEMENT_PLAN.md  NEXTUPDATES.txt  P2P_NETWORK_GUIDE.md  README.md  ROADMAP.md  SECURE_RAG_SYSTEM.md  api_query.py  axiom_lite_ledger.db  check.sh  ci.sh  cleanup_testnet.sh  common.py  crucible.py  fact_cache.json  facts_analysis_report_db.txt  file_list.txt  get_facts.py  get_my_ip.sh  launch_testnet.sh  ledger.py  maintain_feeds.py  node.py  nohup.out  p2p.py  prepopulate_validators.py  pyproject.toml  reset_all_and_start.sh  reset_and_start.sh  restart_nodes.sh  resume_all_nodes.sh  resume_nodes.sh  resume_peer.sh  run_neural_tests.sh  run_tests.sh  setup_identities.py  start-dev-network.sh  start-p2p-network.sh  (+12 more)
.github/workflows/: ci.yml
benchmarks/: verification_benchmark.py
docs/: index.html
explorer/: explorer.js   node_explorer.html
gradio_app/: app.py
main/: readme.txt
models/: IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README_RL_SYSTEM.md  demo_rl_system.txt  llm_learning_memory.pkl  llm_ruff_fixer.py  requirements_rl.txt  test_rl_system.txt
myenv/: pyvenv.cfg
src/: p2p_node.py  shared_node_key.pem
src/axiom_client/: __init__.py  main.py
src/axiom_server/: __init__.py  api_query.py  common.py  crucible.py  discovery_rss.py  discovery_sec.py  dispute_system.py  enhanced_endpoints.py  enhanced_fact_processor.py  hasher.py  index.html  ledger.py  listener_node.py  merkle.py  neural_verifier.py  nlp_utils.py  node.py  p2p.py  p2p_node.py  rag_synthesis.py  run_node.py  synthesizer.py  universal_extractor.py  verification_engine.py  worker.py  zeitgeist_engine.py
src/axiom_server/factReports/: fact_cache.json  fact_reporter.py  fact_reporter_db.py  facts_analysis_report.txt  performance_comparison.md
src/axiom_server/p2p/: constants.py  node.py
src/p2p/: constants.py  node.py  p2p.py
src/tests/: test_ledger.py
ssl/: node.crt  node.key
tests/: test_ledger.py  test_p2p_node.py  test_verification_engine.py
